# fihrist

./: .env-example  .gitignore  README.md  config.py  main.py  pyproject.toml  run.py
app/: __init__.py  errors.py  ext.py
app/blueprints/: __init__.py
app/blueprints/admin/: forms.py  views.py
app/blueprints/auth/: __init__.py  forms.py  views.py
app/blueprints/blog/: __init__.py  forms.py  views.py
app/blueprints/main/: errors.py  (+2 more)
app/models/: __init__.py  anonymous_user.py  blog.py  category.py  comment.py  conversation.py  message.py  participants.py  permission.py  post.py  post_image.py  role.py  user.py  value_objects.py
app/scripts/: fake_data.py  mail_server.py
app/services/: __init__.py  admin_service.py  authentication_service.py  blog_service.py  email_service.py  user_service.py
app/static/: package.json
app/templates/: base.html  index.html
app/utils/: __init__.py  cli.py  decorators.py  security.py  send_email.py
docs/: architecture.md  database.md  decisions.md  installation.md  overview.md  routes.md  templates.md
migrations/versions/: 0c5d426b8ab7_.py  18e98f509a75_.py  2877731c7236_.py  2df500365f9e_.py  3bf556274b6f_.py  5bc1b2f23c2d_.py  71ea0fba2476_.py  79debb2b1e1d_.py  7a9397dc5eee_.py  8fdf1fd7566b_.py  960da2ac5101_.py  acc04cf406c0_.py  b4823070bd98_.py  b4cd779c67c3_.py  bc981cae2455_.py  d5603b169942_.py  ed6f2c87957e_.py
tests/: test_basics.py
tests/test_models/: test_blog_model.py  test_category_model.py  test_comment_model.py  test_post_image_model.py  test_post_model.py  test_role_model.py  test_user_model.py
(+46 files in other folders)
